--- a/cme/templates/css/thresholdGauge.styl
+++ b/cme/templates/css/thresholdGauge.styl
@@ -33,7 +33,8 @@
 		transform rotate(-45deg)
 		span
 			display inline-block
-			margin-top 20px
+			margin-top 24px
+			white-space nowrap
 			transform rotate(45deg)
 .th-badge
 	position absolute
